# fantasy-baseball-z

./: .gitignore  README.md  pyproject.toml
data/: config.json  hitter_projections.csv  hitter_rankings.csv  pitcher_projections.csv  pitcher_rankings.csv
fantasy_baseball/: __main__.py  config.py  main.py
sheets/: hitter_projections.csv  hitter_rankings.csv  pitcher_projections.csv  pitcher_rankings.csv
