[tool.poetry]
name = "fantasy-baseball"
version = "0.2.0"
description = ""
authors = ["Tim Hanna <hannatr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
