[tool.poetry]
name = "fantasy-baseball"
version = "0.2.0"
description = ""
authors = ["Tim Hanna <hannatr@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.10"
pandas = "^1.5.3"
rapidfuzz = "^2.13.7"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
ruff = "^0.0.246"

[tool.black]
line-length = 120

[tool.ruff]
select = ["E", "F", "B", "W", "I", "C", "N", "S", "A"]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
