[tool.poetry]
name = "fantasy-baseball-z"
version = "0.2.0"
description = ""
authors = ["Tim Hanna <hannatr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.0"
rapidfuzz = "^3.6.1"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.1"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "B", "W", "I", "C", "N", "S", "A"]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
